# OpenMP-reverse-offloading

./: .clang-tidy  CMakeLists.txt  README.rst  client.cpp  main.cpp  reverse_offloading.cpp  reverse_offloading.h  server.cpp
include/: architectures.h  attributes.h
include/CPP/: atomic.h  functional.h  optional.h  utility.h
include/GPU/: utils.h
include/GPU/amdgpu/: utils.h
include/GPU/generic/: utils.h
include/GPU/nvptx/: utils.h
include/RPC/: rpc.h  rpc_util.h
